--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,12 @@
 # Use the latest 2.1 version of CircleCI pipeline process engine.
 # See: https://circleci.com/docs/configuration-reference
 version: 2.1
-
+description: |
+    Orb for running Trivy, a security scanner
+display:
+    source_url: https://github.com/15five/trivy-orb
+orbs:
+  trivy-orb: fifteen5/trivy-orb@1.0.0
 # Define a job to be invoked later in a workflow.
 # See: https://circleci.com/docs/configuration-reference/#jobs
 jobs:
@@ -24,3 +29,7 @@ workflows:
   say-hello-workflow:
     jobs:
       - say-hello
+  use-my-orb:
+    jobs:
+      - trivy/scan:
+          args: '--no-progress --exit-code 1 image busybox'
