add push docker images and test

--- a/githubCircle/Dockerfile
+++ b/githubCircle/Dockerfile
@@ -1,11 +1,6 @@
-FROM --platform=amd64 openjdk:8
-<<<<<<< HEAD
-LABEL authors="nghianguyenbbv"
-WORKDIR /gitHubCircleCI
-=======
+FROM openjdk:8
 LABEL authors="nghianguyen"
 WORKDIR /githubCircle
->>>>>>> 5d007d2e724604ca3b31f30159c371e9120a3522
 COPY target/githubCircle.jar githubCircle.jar
 EXPOSE 8080
 CMD ["java", "-jar", "githubCircle.jar"]
