add output file in current folderr

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -111,4 +111,4 @@ workflows:
   use-my-orb:
     jobs:
       - trivy/scan:
-          args: '--no-progress --exit-code 0 image -f json -o trivy-result.json nghiashinhan96/trivy-test:1.0.0'
+          args: '--no-progress --exit-code 0 image -f json -o ./trivy-result.json nghiashinhan96/trivy-test:1.0.0'
