--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -112,4 +112,4 @@ workflows:
   use-my-orb:
     jobs:
       - trivy/scan:
-          args: '--no-progress --exit-code 0 repo -f table -o trivy-results.sarif ./'
+          args: '--no-progress --exit-code 0 repo -f table -o trivy-results.sarif ../'
