--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,7 +34,7 @@ commands:
                 name: Install trivyy
                 command: |
                     apk add --update-cache --upgrade curl
-                    curl -sfL https://raw.githubusercontent.com/aquasecurity/trivy/main/contrib/install.sh | sh -s -- -b /usr/local/binn
+                    curl -sfL https://raw.githubusercontent.com/aquasecurity/trivy/main/contrib/install.sh | sh -s -- -b /usr/local/bin
             - run:
                 name: Scan the local image with trivy
                 command: trivy repo --branch master --exit-code 0 --no-progress https://github.com/nghian2guyenbbv/gitHubCircleCii
@@ -44,7 +44,7 @@ executors:
         description: |
             Executor for trivy
         docker:
-            - image: cimg/base:<<parameters.tag>>
+            - image: docker:stable-git
         parameters:
             tag:
                 default: "2021.07"
@@ -103,5 +103,5 @@ jobs:
 workflows:
   use-my-orb:
     jobs:
-      - trivy/scan:
+      - scan:
           args: '--no-progress --exit-code 0 repo -f table -o trivy-results.sarif https://github.com/nghian2guyenbbv/gitHubCircleCi'
