--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,7 +28,7 @@ commands:
             - checkout
             - run:
                 name: Build image
-                command: docker build -t trivy-ci-test:${CIRCLE_SHA1} .
+                command: docker build -t trivy-ci-test:1.0.0 .././githubCircle
             - run:
                 name: Install trivyy
                 command: |
