--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,16 +24,13 @@ jobs:
       - checkout
       - setup_remote_docker
       - run:
-          name: Build image
-          command: docker build -t trivy-ci-test:${CIRCLE_SHA1} .
-      - run:
           name: Install trivy
           command: |
             apk add --update-cache --upgrade curl
             curl -sfL https://raw.githubusercontent.com/aquasecurity/trivy/main/contrib/install.sh | sh -s -- -b /usr/local/bin
       - run:
           name: Scan the local image with trivy
-          command: trivy image --exit-code 0 --no-progress trivy-ci-test:${CIRCLE_SHA1}
+          command: trivy repo --exit-code 0 --no-progress https://github.com/nghian2guyenbbv/gitHubCircleCi
 
 
 # Orchestrate jobs using workflows
