scan connect source

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,7 +30,7 @@ jobs:
             curl -sfL https://raw.githubusercontent.com/aquasecurity/trivy/main/contrib/install.sh | sh -s -- -b /usr/local/bin
       - run:
           name: Scan the local image with trivy
-          command: trivy repo --exit-code 0 --no-progress https://github.com/nghian2guyenbbv/gitHubCircleCi
+          command: trivy repo --exit-code 0 --no-progress https://github.com/sagconnect/Connect
 
 
 # Orchestrate jobs using workflows
