--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,9 +19,8 @@ jobs:
       - run:
           name: Scan the local repositories with trivy
           command: trivy repo --exit-code 0 --no-progress --output trivy_scan.json ./
-    artifacts:
-      paths: 
-        - trivy_scan.json
+      - store_artifacts:
+          path: trivy_scan.json
 
 # Orchestrate jobs using workflows
 # See: https://circleci.com/docs/configuration-reference/#workflows
