--- a/.github/workflows/renovate.json
+++ b/.github/workflows/renovate.json
@@ -20,6 +20,7 @@
         ],
         "automergeType": "pr",
         "dependencyDashboardApproval": false,
+        "dependencyDashboard": true,
         "stabilityDays": 0
       }
     ]
