--- a/.github/workflows/renovate-deployment.yml
+++ b/.github/workflows/renovate-deployment.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Self-hosted Renovate
         uses: renovatebot/github-action@v39.1.0
         with:
-          configurationFile: .github/workflows/renovate.json
+          configurationFile: .github/workflows/config.js
           token: ${{ secrets.RENOVATE_TOKEN }}
 #   develop-dev:
 #     name: Development deploy applications.
